tests/invalid/Lifetime_Lambda_Invalid_4.whiley
// missing context lifetime

public export method test():
    method()->(&this:int) m = &(-> this:new 1)
